--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title> TRIO </title>
 </head>
-<body>
- 
+<body style="background-image: url('img/Trio.jpeg');" class="Background">
+    <div class="Gridwrapper"> 
+        <header class="Header"> <li><a href="index.html"> Trio </a></li> </header> 
+        <article class="Shop"> <li><a href="Shop.html"> Shop </a></li> </article>
+        <article class="Profile"> <li><a href="Profile.html"> Profile </a></li> </article>
+        <article class="Search"> <li><a href="Search.html"> Search </a></li> </article> 
+        <article class="Cart"> <li><a href="Cart.html"> Cart </a></li> </article>
+
+    </div>
+
     
     
 </body>
